# ftb-snbt-lib

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  setup.py  test.py
.github/workflows/: build.yml  publish.yml  wheels.yml
ftb_snbt_lib/: __init__.py  parse.py  parser.out  parsetab.py  tag.py  token.py  write.py
ftb_snbt_lib/ply/: __init__.py
ftb_snbt_parser/: __init__.py  parse.py  parser.out  parsetab.py  tag.py  token.py  write.py
